--- a/index.html
+++ b/index.html
@@ -1,9 +1,103 @@
-NPM Clone Nifty Penguin Magic npm Enterprise Products Solutions Resources Docs Support Search Join Log In Build amazing
-things Essential JavaScript development tools that help you go to market faster and build powerful applications using
-modern open source code. See plans Join for free Bring the best of open source to your company npm is the tool used by
-over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it.
-Create an Org and get more out of the tools your team already knows and loves. Zero configuration Create an org, add
-your team, and start collaborating. Nothing to configure, set up, or manage. Team management Control who has access to
-what modules within your team namespace using straightforward team management capabilities. Familiar features npm Orgs
-has 100% parity with all the public npm registry features your developers already use. npm audit Enjoy the security
-auditing features built into the npm client, a zero-friction way to make open source software safer. Create an Org
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <header>
+    <div>
+      <div>
+        <img class="blackHeart" src="./images/black-heart.png" alt="black heart" />
+        <span> Nifty Penguin Magic </span>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#"> npm Enterprise </a></li>
+          <li><a href="#"> Products </a></li>
+          <li><a href="#"> Solutions </a></li>
+          <li><a href="#"> Resources </a></li>
+          <li><a href="#"> Docs </a></li>
+          <li><a href="#"> Support </a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="headerBottom">
+      <div class="logo">
+        <img class="npm" src="images/npm-logo.png" alt="npm" />
+        <img class="glass" src="./images/magnifying-glass.png" alt="glass" />
+      </div>
+      <div class="searchbar">
+
+        <form class="formClass" action="/some-url" method="POST">
+          <label for="search"> </label>
+          <input type="text" name="search" id="search" placeholder="Search packages">
+          <button class="buttonSearch" type="submit">Search</button>
+        </form>
+      </div>
+      <div class="buttonHeader">
+        <button class="buttonJoin" type=" submit">Join</button>
+        <button class="buttonLogIIn" type="submit">Log in</button>
+      </div>
+  </header>
+  <section id="build">
+    <h1>Build amazing things</h1>
+    <p>Essential JavaScript development tools that help you go to market faster and build powerful applications using
+      modern open source code.</p>
+    <div class="buttonsBuild">
+      <button class="buttonSeePlans" type=" submit">See plans</button>
+      <button class="joinFree" type="submit"> Join for free</button>
+    </div>
+  </section>
+  <section id="bring">
+    <div class="triangle-image">
+      <img class="triangle" src="./images/triangle-hexagon.svg" alt="hexagon">
+    </div>
+    <div class="bringH1">
+      <h1>Bring the best of open source to your company</h1>
+    </div>
+    <div class=" bringP1">
+      <p>npm is the tool used by
+        over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on
+        it. Create an Org and get more out of the tools your team already knows and loves.</p>
+    </div>
+  </section>
+  <section id="features">
+    <div class="allFeatures">
+      <div>
+        <img class="imgFeatures" src="./images/zero-configuration.svg" alt="zeroConfiguration">
+        <h3>Zero configuration</h3>
+        <p>Create an org, add
+          your team, and start collaborating. Nothing to configure, set up, or manage.</p>
+      </div>
+      <div>
+        <img class="imgFeatures" src="./images/team-management.svg" alt="teamManagement">
+        <h3>Team management</h3>
+        <p>Control who has access to
+          what modules within your team namespace using straightforward team management capabilities.</p>
+      </div>
+      <div>
+        <img class="imgFeatures" src="./images/familiar-features.svg" alt="familiar">
+        <h3>Familiar features</h3>
+        <p>npm Orgs
+          has 100% parity with all the public npm registry features your developers already use.</p>
+      </div>
+      <div>
+        <img class="imgFeatures" src="./images/familiar-features.svg" alt="familiar">
+        <h3>npm audit</h3>
+        <p>Enjoy the security
+          auditing features built into the npm client, a zero-friction way to make open source software safer..</p>
+      </div>
+    </div>
+    <div class="create-button">
+      <button class="create-org" type="submit">Create an org</button>
+    </div>
+  </section>
+</body>
+
+</html>
